incubator jdk configuration removed as per java 21 in all the scripts, yarn appctx, appmaster and ignite serialization, deserialization added to ignite